Config exportiert, Beim Klonen dem Titel ein "Clone of" voranstellen.

--- a/config/sync/views.view.kader_2.yml
+++ b/config/sync/views.view.kader_2.yml
@@ -196,6 +196,8 @@ display:
           settings:
             image_link: content
             image_style: portrait_tiny
+            image_loading:
+              attribute: lazy
           group_column: ''
           group_columns: {  }
           group_rows: true
