--- a/config/sync/views.view.referenced_player.yml
+++ b/config/sync/views.view.referenced_player.yml
@@ -80,6 +80,8 @@ display:
           settings:
             image_link: content
             image_style: portrait_medium
+            image_loading:
+              attribute: lazy
           group_column: ''
           group_columns: {  }
           group_rows: true
