--- a/config/sync/views.view.players.yml
+++ b/config/sync/views.view.players.yml
@@ -136,6 +136,8 @@ display:
           settings:
             image_link: ''
             image_style: portrait_tiny
+            image_loading:
+              attribute: lazy
           group_column: ''
           group_columns: {  }
           group_rows: true
