--- a/config/sync/linkit.linkit_profile.default.yml
+++ b/config/sync/linkit.linkit_profile.default.yml
@@ -23,5 +23,6 @@ matchers:
         turnier: turnier
       group_by_bundle: false
       substitution_type: canonical
+      limit: 100
       include_unpublished: false
     weight: 0
