--- a/config/sync/core.entity_view_display.node.article.default.yml
+++ b/config/sync/core.entity_view_display.node.article.default.yml
@@ -68,6 +68,8 @@ content:
     settings:
       image_link: ''
       image_style: inline_full_width
+      image_loading:
+        attribute: lazy
     third_party_settings: {  }
     weight: 0
     region: content
