--- a/config/sync/core.entity_view_display.node.player.autor_info.yml
+++ b/config/sync/core.entity_view_display.node.player.autor_info.yml
@@ -34,6 +34,8 @@ content:
     settings:
       image_link: ''
       image_style: portrait_autor
+      image_loading:
+        attribute: lazy
     third_party_settings: {  }
     weight: 0
     region: content
