--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
     ],
     "require": {
         "composer/installers": "^1.2",
-        "drupal/admin_toolbar": "^3.0",
-        "drupal/allowed_formats": "^1.3",
-        "drupal/antibot": "^1.4",
+        "drupal/admin_toolbar": "^3.1",
+        "drupal/allowed_formats": "^1.5",
+        "drupal/antibot": "^2.0",
         "drupal/backup_migrate": "^5.0",
-        "drupal/better_exposed_filters": "^5.0@beta",
+        "drupal/better_exposed_filters": "^5.2",
         "drupal/better_formats": "1.x-dev",
         "drupal/block_class": "^1.3",
         "drupal/businessgroup_zymphonies_theme": "^2.0",
