--- a/web/modules/contrib/better_exposed_filters/tests/modules/bef_test/bef_test.info.yml
+++ b/web/modules/contrib/better_exposed_filters/tests/modules/bef_test/bef_test.info.yml
@@ -10,7 +10,7 @@ dependencies:
   - drupal:options
   - drupal:user
 
-# Information added by Drupal.org packaging script on 2020-07-07
-version: '8.x-5.0-beta1'
+# Information added by Drupal.org packaging script on 2022-07-07
+version: '8.x-5.2'
 project: 'better_exposed_filters'
-datestamp: 1594141894
+datestamp: 1657172289
