--- a/config/sync/views.view.news.yml
+++ b/config/sync/views.view.news.yml
@@ -1071,7 +1071,7 @@ display:
           date_field: created
           guid_field_options:
             guid_field: nid
-            guid_field_is_permalink: true
+            guid_field_is_permalink: false
       defaults:
         title: false
         fields: false
