--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "composer/installers": "^1.2",
-        "drupal/admin_toolbar": "3.0.3",
+        "drupal/admin_toolbar": "^3.1",
         "drupal/allowed_formats": "^1.5",
         "drupal/antibot": "^2.0",
         "drupal/backup_migrate": "^5.0",
@@ -32,7 +32,7 @@
         "drupal/crop": "^2.2",
         "drupal/ctools": "3.11",
         "drupal/devel": "^4.1",
-        "drupal/editor_file": "1.5.0",
+        "drupal/editor_file": "^1.6",
         "drupal/embed": "^1.6",
         "drupal/entity_embed": "^1.2",
         "drupal/entity_reference_revisions": "^1.10",
