--- a/config/sync/filter.format.full_html.yml
+++ b/config/sync/filter.format.full_html.yml
@@ -7,6 +7,7 @@ dependencies:
     - entity_embed
     - inline_responsive_images
     - linkit
+    - responsive_tables_filter
     - spamspan
 _core:
   default_config_hash: hewPmBgni9jlDK_IjLxUx1HsTbinK-hdl0lOwjbteIY
@@ -18,47 +19,47 @@ filters:
     id: filter_align
     provider: filter
     status: true
-    weight: 8
+    weight: -47
     settings: {  }
   filter_caption:
     id: filter_caption
     provider: filter
     status: true
-    weight: 9
+    weight: -46
     settings: {  }
   filter_htmlcorrector:
     id: filter_htmlcorrector
     provider: filter
     status: true
-    weight: 10
+    weight: -44
     settings: {  }
   editor_file_reference:
     id: editor_file_reference
     provider: editor
     status: true
-    weight: 11
+    weight: -43
     settings: {  }
   filter_html:
     id: filter_html
     provider: filter
     status: false
-    weight: -10
+    weight: -42
     settings:
-      allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <s> <sup> <sub> <a href hreflang data-entity-type data-entity-uuid title> <img src alt data-entity-type data-entity-uuid data-align data-caption> <table> <caption> <tbody> <thead> <tfoot> <th> <td> <tr> <hr> <p> <h1> <pre>'
+      allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <s> <sup> <sub> <a href hreflang data-entity-type data-entity-uuid title> <caption> <tbody> <thead> <tfoot> <th> <td> <tr> <hr> <p> <h1> <pre> <img src alt data-entity-type data-entity-uuid data-align data-caption data-responsive-image-style> <table class="center-table no-style"> <drupal-entity data-entity-type data-entity-uuid data-entity-embed-display data-entity-embed-display-settings data-align data-caption data-embed-button data-langcode alt title>'
       filter_html_help: true
       filter_html_nofollow: false
   linkit:
     id: linkit
     provider: linkit
     status: true
-    weight: -15
+    weight: -50
     settings:
       title: true
   filter_spamspan:
     id: filter_spamspan
     provider: spamspan
     status: true
-    weight: 0
+    weight: -48
     settings:
       spamspan_at: ' [at] '
       spamspan_use_graphic: '1'
@@ -72,17 +73,20 @@ filters:
     id: entity_embed
     provider: entity_embed
     status: true
-    weight: 0
+    weight: -45
     settings: {  }
   filter_imagestyle:
     id: filter_imagestyle
     provider: inline_responsive_images
     status: false
-    weight: 0
+    weight: -38
     settings:
       image_style_gallery_full: '0'
       image_style_header_slideshow: '0'
+      image_style_header_slideshow_smartphone: '0'
+      image_style_header_slideshow_tablet_portrait: '0'
       image_style_image_gallery_thumb: '0'
+      image_style_inhaltsbild_halbe_breite: '0'
       image_style_inhaltsbild_mobile_volle_breite: '0'
       image_style_inline_full_width: '0'
       image_style_large: '0'
@@ -92,7 +96,10 @@ filters:
       image_style_max_325x325: '0'
       image_style_max_650x650: '0'
       image_style_medium: '0'
+      image_style_news_thumb_mobile: '0'
+      image_style_news_thumb_startseite: '0'
       image_style_portrait: '0'
+      image_style_portrait_autor: '0'
       image_style_portrait_medium: '0'
       image_style_portrait_tiny: '0'
       image_style_thumbnail: '0'
@@ -100,8 +107,44 @@ filters:
     id: filter_responsive_image_style
     provider: inline_responsive_images
     status: true
-    weight: 0
+    weight: -49
     settings:
+      responsive_style_header_slideshow: '0'
       responsive_style_inhaltsbild_volle_breite: '1'
+      responsive_style_inhaltsbild_z_halbe_breite: '1'
       responsive_style_narrow: '0'
+      responsive_style_news_thumb_startseite: '0'
       responsive_style_wide: '0'
+  filter_html_image_secure:
+    id: filter_html_image_secure
+    provider: filter
+    status: false
+    weight: -36
+    settings: {  }
+  filter_url:
+    id: filter_url
+    provider: filter
+    status: false
+    weight: -39
+    settings:
+      filter_url_length: 72
+  filter_html_escape:
+    id: filter_html_escape
+    provider: filter
+    status: false
+    weight: -41
+    settings: {  }
+  filter_autop:
+    id: filter_autop
+    provider: filter
+    status: false
+    weight: -40
+    settings: {  }
+  filter_responsive_tables_filter:
+    id: filter_responsive_tables_filter
+    provider: responsive_tables_filter
+    status: false
+    weight: -37
+    settings:
+      tablesaw_type: stack
+      tablesaw_persist: '1'
