--- a/config/sync/views.view.events_list.yml
+++ b/config/sync/views.view.events_list.yml
@@ -732,7 +732,13 @@ display:
       defaults:
         title: false
         pager: false
+        use_more: false
+        use_more_always: false
+        use_more_text: false
         fields: false
+      use_more: true
+      use_more_always: true
+      use_more_text: 'alle Termine >>'
       display_extenders: {  }
     cache_metadata:
       max-age: -1
