--- a/config/sync/block.block.views_block__events_list_block_2.yml
+++ b/config/sync/block.block.views_block__events_list_block_2.yml
@@ -1,4 +1,4 @@
-uuid: 382a214b-275f-47c0-a34f-0b2d892c6f05
+uuid: 979e80d8-9090-4f8c-b907-ebd360ac1f17
 langcode: de
 status: true
 dependencies:
@@ -6,29 +6,23 @@ dependencies:
     - views.view.events_list
   module:
     - node
-    - system
     - views
   theme:
     - hsk_zymphonies
-id: views_block__events_list_block_1_2
+id: views_block__events_list_block_2
 theme: hsk_zymphonies
 region: sidebar_second
-weight: -8
+weight: 0
 provider: null
-plugin: 'views_block:events_list-block_1'
+plugin: 'views_block:events_list-block_2'
 settings:
-  id: 'views_block:events_list-block_1'
+  id: 'views_block:events_list-block_2'
   label: ''
   label_display: visible
   provider: views
   views_label: ''
-  items_per_page: '5'
+  items_per_page: none
 visibility:
-  request_path:
-    id: request_path
-    negate: true
-    context_mapping: {  }
-    pages: "<front>\r\n/turniere\r\n/vereinsmeisterschaft\r\n/vereinspokal\r\n/monatsblitz\r\n/schnellschach\r\n/turnier-simultan-tusi\r\n/thema-turnier\r\n/vorstand\r\n/node/351"
   'entity_bundle:node':
     id: 'entity_bundle:node'
     negate: false
@@ -37,4 +31,3 @@ visibility:
     bundles:
       article: article
       event: event
-      page: page
