hsk_block Modul aktivieren, Header Slideshow Block auf Startseite im Content platzieren

--- a/config/sync/block.block.newsauthor.yml
+++ b/config/sync/block.block.newsauthor.yml
@@ -3,8 +3,8 @@ langcode: de
 status: true
 dependencies:
   module:
-    - ctools
     - hsk_news
+    - node
   theme:
     - hsk_zymphonies
 id: newsauthor
