--- a/composer.json
+++ b/composer.json
@@ -64,6 +64,7 @@
         "drupal/spamspan": "^1.2",
         "drupal/time_field": "^2.0",
         "drupal/token": "^1.11",
+        "drupal/twig_tweak": "^3.2",
         "drupal/typed_data": "^1.0@beta",
         "drupal/video_embed_field": "^2.4",
         "drupal/view_unpublished": "^1.0",
