Erlauben, auch Mannschaften zu klonen für Chefredakteur Rolle.

--- a/config/sync/user.role.chefredakteur.yml
+++ b/config/sync/user.role.chefredakteur.yml
@@ -40,6 +40,7 @@ permissions:
   - 'bypass node access'
   - 'clone event content'
   - 'clone page content'
+  - 'clone team content'
   - 'clone turnier content'
   - 'create url aliases'
   - 'entityconnect add button'
