Spamspan auf neueste Version upgedatet, bei alter gabs ne Fehlermeldung/Notice mit PHP 8

--- a/web/modules/contrib/spamspan/spamspan.services.yml
+++ b/web/modules/contrib/spamspan/spamspan.services.yml
@@ -1,6 +1,6 @@
 services:  
   spamspan.twig.spamspan_filter:
     arguments: ['@renderer']
-    class: Drupal\spamspan\TwigExtension\SpamSpanExtension
+    class: Drupal\spamspan\TwigExtension\SpamspanExtension
     tags:
       - { name: twig.extension }
