--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,7 @@
         "drupal/responsive_tables_filter": "^1.16",
         "drupal/rules": "3.x-dev",
         "drupal/shield": "^1.4",
-        "drupal/spamspan": "^1.2",
+        "drupal/spamspan": "*",
         "drupal/time_field": "^2.0",
         "drupal/token": "^1.11",
         "drupal/twig_tweak": "^3.2",
@@ -77,7 +77,11 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "composer/installers": true,
+            "drupal/core-composer-scaffold": true
+        }
     },
     "extra": {
         "drupal-scaffold": {
