--- a/web/modules/contrib/spamspan/composer.json
+++ b/web/modules/contrib/spamspan/composer.json
@@ -3,7 +3,7 @@
   "type": "drupal-module",
   "description": "The SpamSpan module obfuscates email addresses to help prevent spambots from collecting them. It implements the technique at http://www.spamspan.com.",
   "homepage": "http://drupal.org/project/spamspan",
-  "license": "GPL-2.0+",
+  "license": "GPL-2.0-or-later",
   "require": {
     "drupal/core": "~8.1 || ^9"
   }
