--- a/web/modules/contrib/spamspan/spamspan.routing.yml
+++ b/web/modules/contrib/spamspan/spamspan.routing.yml
@@ -1,7 +1,7 @@
 spamspan.test:
   path: 'admin/config/content/formats/spamspan'
   defaults:
-    _form: 'Drupal\spamspan\Form\SpamSpanTestForm'
+    _form: 'Drupal\spamspan\Form\SpamspanTestForm'
     _title: 'Spamspan test page'
   requirements:
     _permission: 'administer filters'
