--- a/config/sync/field.field.node.page.field_gallery_above_body.yml
+++ b/config/sync/field.field.node.page.field_gallery_above_body.yml
@@ -6,13 +6,14 @@ dependencies:
     - field.storage.node.field_gallery_above_body
     - node.type.page
     - paragraphs.paragraphs_type.image_gallery
+    - paragraphs.paragraphs_type.infoblock
   module:
     - entity_reference_revisions
 id: node.page.field_gallery_above_body
 field_name: field_gallery_above_body
 entity_type: node
 bundle: page
-label: 'Bildergalerie oben'
+label: 'Galerie oder Infobox'
 description: ''
 required: false
 translatable: true
@@ -23,8 +24,31 @@ settings:
   handler_settings:
     target_bundles:
       image_gallery: image_gallery
+      infoblock: infoblock
+    negate: 0
     target_bundles_drag_drop:
+      gallery_image:
+        weight: 9
+        enabled: false
       image_gallery:
         weight: 2
         enabled: true
+      infoblock:
+        weight: 11
+        enabled: true
+      pgn_viewer:
+        weight: 12
+        enabled: false
+      slideshow:
+        weight: 13
+        enabled: false
+      slideshow_image:
+        weight: 14
+        enabled: false
+      text:
+        weight: 15
+        enabled: false
+      video:
+        weight: 16
+        enabled: false
 field_type: entity_reference_revisions
