--- a/config/sync/image.style.bildblock_desktop.yml
+++ b/config/sync/image.style.bildblock_desktop.yml
@@ -7,10 +7,10 @@ dependencies:
 name: bildblock_desktop
 label: 'Bildblock Desktop'
 effects:
-  1ecd4c5a-0077-4b16-a08b-80c32890c762:
-    uuid: 1ecd4c5a-0077-4b16-a08b-80c32890c762
-    id: focal_point_crop
-    weight: 1
+  63cc8f51-085f-4b27-ac3f-01c9a0770364:
+    uuid: 63cc8f51-085f-4b27-ac3f-01c9a0770364
+    id: focal_point_scale_and_crop
+    weight: 2
     data:
       width: 300
       height: 180
