--- a/config/sync/image.style.bildblock_mobile.yml
+++ b/config/sync/image.style.bildblock_mobile.yml
@@ -7,10 +7,10 @@ dependencies:
 name: bildblock_mobile
 label: 'Bildblock Mobile'
 effects:
-  71b66460-2d9c-4096-b475-4e34ea3c5c2d:
-    uuid: 71b66460-2d9c-4096-b475-4e34ea3c5c2d
-    id: focal_point_crop
-    weight: 1
+  c5882cff-5ef8-4cca-ba95-d0bc9a84db50:
+    uuid: c5882cff-5ef8-4cca-ba95-d0bc9a84db50
+    id: focal_point_scale_and_crop
+    weight: 2
     data:
       width: 500
       height: 300
