--- a/web/themes/hsk_zymphonies/hsk_zymphonies.info.yml
+++ b/web/themes/hsk_zymphonies/hsk_zymphonies.info.yml
@@ -31,6 +31,7 @@ regions:
   breadcrumb: 'Breadcrumb'
   search: 'Search'
   content: 'Content'
+  content_full_width_bottom: 'Content full width bottom'
   sidebar_first: 'Left Sidebar'
   sidebar_second: 'Right Sidebar'
   bottom_first: 'Bottom First Widget'
