--- a/config/sync/field.field.paragraph.infoblock.field_sli_image.yml
+++ b/config/sync/field.field.paragraph.infoblock.field_sli_image.yml
@@ -20,7 +20,7 @@ default_value_callback: ''
 settings:
   handler: 'default:file'
   handler_settings: {  }
-  file_directory: '[date:custom:Y]-[date:custom:m]'
+  file_directory: content-image
   file_extensions: 'png gif jpg jpeg'
   max_filesize: ''
   max_resolution: ''
