--- a/config/sync/webform.webform.anmeldung_als_vereinsmitglied.yml
+++ b/config/sync/webform.webform.anmeldung_als_vereinsmitglied.yml
@@ -302,11 +302,11 @@ handlers:
     settings:
       states:
         - completed
-      to_mail: h.schilling@kabelmail.de
+      to_mail: finanzen@schachklub-hannover.de
       to_options: {  }
       bcc_mail: ''
       bcc_options: {  }
-      cc_mail: 'thomas@rufzeichen-online.de, lukahoffmann@aol.com, klaus.luetjen@web.de, finanzen@schachklub-hannover.de'
+      cc_mail: 'thomas@rufzeichen-online.de, c.lossin@gmx.net, lukahoffmann@aol.com, klaus.luetjen@web.de'
       cc_options: {  }
       from_mail: info@schachklub-hannover.de
       from_options: {  }
