--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -25,16 +25,16 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 1
+    weight: 2
     region: content
   field_ev_date:
     type: datetime_default
-    label: above
+    label: visually_hidden
     settings:
       timezone_override: ''
       format_type: date_full_weekday_no_time
     third_party_settings: {  }
-    weight: 2
+    weight: 1
     region: content
   field_event_location:
     type: string
@@ -42,7 +42,7 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 7
+    weight: 5
     region: content
   field_event_room:
     type: string
@@ -50,7 +50,7 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 8
+    weight: 6
     region: content
   field_event_type:
     type: entity_reference_label
@@ -58,7 +58,7 @@ content:
     settings:
       link: false
     third_party_settings: {  }
-    weight: 6
+    weight: 4
     region: content
   field_uhrzeit:
     type: time_range_formatter
