--- a/config/sync/views.view.events_list.yml
+++ b/config/sync/views.view.events_list.yml
@@ -1551,7 +1551,7 @@ display:
           exposed: true
           expose:
             operator_id: field_event_type_target_id_op
-            label: 'Art der Veranstaltung'
+            label: 'Filtern nach Art der Veranstaltung'
             description: ''
             use_operator: false
             operator: field_event_type_target_id_op
@@ -1567,6 +1567,8 @@ display:
               administrator: '0'
               redakteur: '0'
               chefredakteur: '0'
+              structure_admin: '0'
+              log_inspektor: '0'
             reduce: false
           is_grouped: false
           group_info:
