--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     ],
     "require": {
         "composer/installers": "^1.2",
-        "drupal/admin_toolbar": "^3.1",
-        "drupal/allowed_formats": "^1.5",
+        "drupal/admin_toolbar": "^3.4",
+        "drupal/allowed_formats": "^2.0",
         "drupal/antibot": "^2.0",
         "drupal/backup_migrate": "^5.0",
         "drupal/better_exposed_filters": "^5.2",
@@ -26,7 +26,7 @@
         "drupal/businessgroup_zymphonies_theme": "^2.0",
         "drupal/chosen": "^3.0",
         "drupal/colorbox": "^1.10",
-        "drupal/content_access": "^2.0@RC",
+        "drupal/content_access": "^2.0",
         "drupal/core-composer-scaffold": "^9.2",
         "drupal/core-recommended": "^9.2",
         "drupal/crop": "^2.2",
@@ -38,7 +38,7 @@
         "drupal/entity_reference_revisions": "^1.10",
         "drupal/entityconnect": "^2.0@RC",
         "drupal/eu_cookie_compliance": "^1.21",
-        "drupal/eva": "^2.1",
+        "drupal/eva": "^3.0",
         "drupal/extlink": "^1.6",
         "drupal/field_group": "^3.2",
         "drupal/field_validation": "^1.0@beta",
