--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
         "drupal/eva": "^3.0",
         "drupal/extlink": "^1.6",
         "drupal/field_group": "^3.2",
-        "drupal/field_validation": "^1.0@beta",
+        "drupal/field_validation": "^1.1",
         "drupal/focal_point": "^1.5",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/inline_responsive_images": "^2.3",
